@@ -1,5 +1,9 @@
 2006-12-14  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/gconvert.c (open_converter): Don't use alloca
+	and avoid allocating memory for small keys that are 
+	already cached.  (#172406, Morten Welinder)
+
 	* glib/gmain.c (g_child_watch_add_full): Improve the docs.
 	(#345569, Tim-Philipp Müller)
 
